--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edgewear - Fashion & Clothing</title>
+    <title>Dazzyfit - Fashion & Clothing</title>
     <style>
         * {
             margin: 0;
@@ -354,7 +354,7 @@
      <div id="main-content">
     <nav>
         <div class="nav-container">
-            <div class="logo">Edgewear</div>
+            <div class="logo">Dazzyfit</div>
             <ul class="nav-links">
                 <li><a href="#" onclick="showPage('home')" class="active">Home</a></li>
                 <li><a href="#" onclick="showPage('products')">Products</a></li>
@@ -373,7 +373,7 @@
             <!-- Home Page -->
             <div id="home" class="page active">
                 <div class="hero">
-                    <h1>Welcome to Edgewear</h1>
+                    <h1>Welcome to Dazzyfit</h1>
                     <p>Discover the latest fashion trends and premium clothing</p>
                     <button class="cta-button" onclick="showPage('products')">Shop Now</button>
                 </div>
@@ -738,4 +738,5 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
+
 </html>
